--- a/CSS/filmscoring.css
+++ b/CSS/filmscoring.css
@@ -82,8 +82,28 @@ body::after{
     margin-top: 7px;
     letter-spacing: 1px;
 }
-.header-main-socialmedia-insta-tag:hover {
-    color:rgb(132, 192, 207);
+.header-main-navigation .home-nav a:hover {
+    color: rgb(132, 192, 207);
+}
+
+.header-main-navigation .aboutme-nav a:hover {
+    color: rgb(132, 192, 207);
+}
+
+.header-main-navigation .songwriting-nav a:hover {
+    color:rgb(228, 233, 167);
+}
+
+.header-main-navigation .production-nav a:hover {
+    color:rgb(232, 189, 248);
+}
+
+.header-main-navigation .filmscoring-nav a:hover {
+    color: rgb(191, 244, 194);
+}
+
+.header-main-navigation .contact-nav a:hover {
+    color: rgb(132, 192, 207);
 }
 .header-main-socialmedia-tiktok {
     margin-left: 7px;
@@ -123,7 +143,8 @@ body::after{
 .film-header-filmscenes{
     margin-left: 10px;
     text-transform: uppercase;
-    color: rgb(132, 192, 207);
+    color: rgb(145, 218, 149);
+    margin-right: 10px;
 }
 .videos-film{
     justify-content: center;
