--- a/CSS/reset.css
+++ b/CSS/reset.css
@@ -2,36 +2,45 @@
 
 /* Remove all the styles of the "User-Agent-Stylesheet", except for the 'display' property */
 *:where(:not(iframe, canvas, img, svg, video):not(svg *)) {
-    all: unset;
-    display: revert;
-  }
-  
-  /* Preferred box-sizing value */
-  *,
-  *::before,
-  *::after {
-    box-sizing: border-box;
-  }
-  
-  /*
-    Remove list styles (bullets/numbers)
-    in case you use it with normalize.css
-  */
-  ol, ul {
-    list-style: none;
-  }
-  
-  /* For images to not be able to exceed their container */
-  img {
-    max-width: 100%;
-  }
-  
-  /* Removes spacing between cells in tables */
-  table {
-    border-collapse: collapse;
-  }
-  
-  /* Revert the 'white-space' property for textarea elements on Safari */
-  textarea {
-    white-space: revert;
-  }
+  all: unset;
+  display: revert;
+}
+
+/* Preferred box-sizing value */
+*, 
+*::before, 
+*::after {
+  box-sizing: border-box;
+}
+
+/*
+  Remove list styles (bullets/numbers)
+  in case you use it with normalize.css
+*/
+ol, ul {
+  list-style: none;
+}
+
+/* For images to not be able to exceed their container */
+img {
+  max-width: 100%;
+}
+
+/* Removes spacing between cells in tables */
+table {
+  border-collapse: collapse;
+}
+
+/* Revert the 'white-space' property for textarea elements on Safari */
+textarea {
+  white-space: revert;
+}
+
+/* Ensure the audio element is displayed */
+audio {
+  display: inline-block; /* Ensures the audio element is displayed */
+  width: 100%; /* Ensures it takes up the available space */
+  height: auto; /* Ensures the height scales properly */
+  max-width: 100%; /* Prevents the audio player from exceeding its container */
+}
+
