--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -51,6 +51,7 @@ body::after{
     display: block;
     height: 100%;
 }
+
 .header-main-navigation .home-nav a:hover {
     color: rgb(132, 192, 207);
 }
@@ -74,6 +75,7 @@ body::after{
 .header-main-navigation .contact-nav a:hover {
     color: rgb(132, 192, 207);
 }
+
 
 .header-main-socialmedia{
     width: 250px;
@@ -127,4 +129,24 @@ body::after{
 }
 .header-main-socialmedia-tiktok-tag:hover {
     color:rgb(132, 192, 207);
+}
+.picture-oier {
+    width: 100%;
+    height: 100vh; 
+    margin-top: 60px; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-size: 100vh;
+}
+
+.contact-img {
+    width: 100%;
+    height: auto;
+    object-fit: cover; 
+}
+.contact-background-img{
+    width: 100%;
+    height: auto;
+    object-fit: cover;
 }
