--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -130,7 +130,7 @@ body::after{
 .header-main-socialmedia-tiktok-tag:hover {
     color:rgb(132, 192, 207);
 }
-.picture-oier {
+.contact-image {
     width: 100%;
     height: 100vh; 
     margin-top: 60px; 
@@ -144,9 +144,4 @@ body::after{
     width: 100%;
     height: auto;
     object-fit: cover; 
-}
-.contact-background-img{
-    width: 100%;
-    height: auto;
-    object-fit: cover;
 }
